# ghfs-cross

./: .gitignore  CHANGELOG.md  Makefile  README.md  ghfs.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
Formula/: ghfs.rb
ghfs/: __init__.py  cache.py  cli.py  filesystem.py  fuse_adapter.py  github_client.py  windows_adapter.py
packaging/: win_version_info.txt
packaging/choco/: ghfs.nuspec
packaging/choco/tools/: chocolateyInstall.ps1
packaging/deb/: build_deb.sh
packaging/deb/DEBIAN/: control
packaging/pyinstaller_hooks/: hook-refuse.py
packaging/scoop/: ghfs.json
packaging/winget/: ghfs.yaml
scripts/: install.ps1  install.sh
tests/: test_ghfs.py
